# aliaz-sync

./: .gitignore  Cargo.toml  package-lock.json  package.json  wrangler.toml
src/: main.rs
tests/: cli.rs
worker/migrations/: 0001_initial.sql
worker/src/: index.ts
