[package]
name = "aliaz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
rusqlite = { version = "0.37", features = ["bundled"] }
shlex = "1.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
